kubernetes/deployment-poi.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poi
  namespace: rudra
spec:
  replicas: 3
  selector:
    matchLabels:
      app: poi
  template:
    metadata:
      labels:
        app: poi
    spec:
      containers:
      - name: poi-api
        image: registryjrc4068.azurecr.io/rudra/poi:v1        
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: poiservice
  namespace: rudra
spec:
  selector:
    app: poi
  ports:
  - port: 80
    targetPort: 80
