kubernetes/deployment-tripapi.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tripapi-app
  namespace: rudra
spec:
  replicas: 3
  selector:
    matchLabels:
      app: trip
  template:
    metadata:
      labels:
        app: trip
    spec:
      containers:
      - name: tripapi
        image: registryjrc4068.azurecr.io/rudra/trips:v1 
        resources:
          limits:
            memory: "256Mi"
            cpu: "1024m"
        env :
        - name: SQL_PASSWORD
          value: "kQ9pg2Kl9"
        - name: SQL_SERVER
          value: "sqlserverjrc4068"
        - name: SQL_USER
          value: "sqladminjRc4068"
        - name: SQL_DBNAME
          value: "mydrivingDB"
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: tripapi
  namespace: rudra
spec:
  selector:
    app: trip
  ports:
  - port: 80
    targetPort: 80
