kubernetes/deployment-tripviewer.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tripviewer-app
  namespace: rudra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tripviewer
  template:
    metadata:
      labels:
        app: tripviewer
    spec:
      containers:
      - name: tripviewer-api
        image: registryjrc4068.azurecr.io/rudra/tripviewer:v1 
        resources:
          limits:
            memory: "256Mi"
            cpu: "1024m"
        env :
        - name: USERPROFILE_API_ENDPOINT
          value: "http://userprofile-svc.rudra.svc.cluster.local"
        - name: TRIPS_API_ENDPOINT
          value: "http://trips-svc.rudra.svc.cluster.local"
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: tripviewer-svc
  namespace: rudra
spec:
  selector:
    app: tripviewer
  ports:
  - port: 80
    targetPort: 80
  type: LoadBalancer
