kubernetes/deployment-user.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
  namespace: rudra
spec:
  replicas: 3
  selector:
    matchLabels:
      app: userapi
  template:
    metadata:
      labels:
        app: userapi
    spec:
      containers:
      - name: user-api
        image: registryjrc4068.azurecr.io/rudra/userapi:v1 
        env :
        - name: SQL_PASSWORD
          valueFrom: 
            secretKeyRef:
              name: sql-db-credentials
              key: sql-password
        - name: SQL_SERVER
          valueFrom: 
            secretKeyRef:
              name: sql-db-credentials
              key: sql-server-name
        - name: SQL_USER
          valueFrom:
            secretKeyRef:
              name: sql-db-credentials
              key: sql-username
        - name: SQL_DBNAME
          valueFrom:
            secretKeyRef:
              name: sql-db-credentials
              key: sql-db-name
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: user-svc
  namespace: rudra
spec:
  selector:
    app: userapi
  ports:
  - port: 80
    targetPort: 80
