kubernetes/deployment-userprofile.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userprofile
  namespace: rudra
spec:
  replicas: 3
  selector:
    matchLabels:
      app: userprofile
  template:
    metadata:
      labels:
        app: userprofile
    spec:
      containers:
      - name: userprofile-api
        image: registryjrc4068.azurecr.io/rudra/userprofile:v1 
        resources:
          limits:
            memory: "256Mi"
            cpu: "1024m"
        env :
        - name: SQL_PASSWORD
          valueFrom: 
            secretKeyRef:
              name: sql-db-credentials
              key: sql-password
        - name: SQL_SERVER
          valueFrom: 
            secretKeyRef:
              name: sql-db-credentials
              key: sql-server-name
        - name: SQL_USER
          valueFrom:
            secretKeyRef:
              name: sql-db-credentials
              key: sql-username
        - name: SQL_DBNAME
          valueFrom:
            secretKeyRef:
              name: sql-db-credentials
              key: sql-db-name
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: userprofile-svc
  namespace: rudra
spec:
  selector:
    app: userprofile
  ports:
  - port: 80
    targetPort: 80
